_includes/manuals/2.2/7.2_debugging.md

### Foreman debugging

Edit `/etc/foreman/settings.yaml` and either uncomment or add these lines:

    :logging:
      :level: debug

And reload Foreman:

    touch ~foreman/tmp/restart.txt

#### Enabling more specific logs

More types of log messages can be enabled from settings.yaml. The following loggers are enabled by default:

* app - web requests and all general application logs
* audit - additional fact import statistics, numbers of facts added/updated/removed
* proxy - logs from reaching out to smart proxies
* notifications - logs from notification handlers
* backgroud - logs from background jobs like RSS or Dynflow
* dynflow - low level logs from dynflow engine
* templates - messages from template renderer
* blob - contents of rendered templates for archival purposes

The following loggers needs to be explicitly enabled:

* ldap - high level LDAP queries (e.g. find users in group) and LDAP operations performed (default: false)
* permissions - evaluation of user roles, filters and permissions when loading pages
* sql - SQL queries made through Rails ActiveRecord, only debug
* telemetry - logs for debugging telemetry messages

Uncomment or add a :loggers block to enable or disable loggers:

    :loggers:
      :ldap:
        :enabled: true

Plugins may add their own logs too, see /etc/foreman/plugins/ for their possible configuration.

Also see [Configuration Options]({{ site.baseurl }}manuals/{{ page.version }}/index.html#3.5.2ConfigurationOptions) for more information.

#### Structured logging

Starting from Foreman 1.18, logging stack can be configured to log into system journal:

    :logging:
      :level: info
      :type: journald

On Red Hat compatible systems, journald is running in transient mode by default and forwards all logs to syslog which means structured information is dropped after some time (memory buffer only holds few hours back). To see structured fields:

    journalctl -fo verbose

Here is the list of most important structured fields which can help with debugging:

<table class="table table-bordered table-condensed">
  <tr>
    <th>Journald name</th>
    <th>JSON name</th>
    <th>Description</th>
  </tr>
  <tr>
    <td>USER_LOGIN</td>
    <td>["mdc"]["user_login"]</td>
    <td>User login name</td>
  </tr>
  <tr>
    <td>ORG_ID</td>
    <td>["mdc"]["org_id"]</td>
    <td>Organization database ID</td>
  </tr>
  <tr>
    <td>LOC_ID</td>
    <td>["mdc"]["loc_id"]</td>
    <td>Location database ID</td>
  </tr>
  <tr>
    <td>REMOTE_IP</td>
    <td>["mdc"]["remote_ip"]</td>
    <td>Remote IP address of a client</td>
  </tr>
  <tr>
    <td>REQUEST</td>
    <td>["mdc"]["request"]</td>
    <td>Request ID generated by ActionDispatch</td>
  </tr>
  <tr>
    <td>SESSION</td>
    <td>["mdc"]["session"]</td>
    <td>Random ID generated per session or request for session-less request</td>
  </tr>
  <tr>
    <td>EXCEPTION_MESSAGE</td>
    <td>["ndc"]["exception_message"]</td>
    <td>Exception message when error is logged</td>
  </tr>
  <tr>
    <td>EXCEPTION_CLASS</td>
    <td>["ndc"]["exception_class"]</td>
    <td>Exception Ruby class when error is logged</td>
  </tr>
  <tr>
    <td>EXCEPTION_BACKTRACE</td>
    <td>["ndc"]["exception_backtrace"]</td>
    <td>Exception backtrace as a multiline string when error is logged</td>
  </tr>
  <tr>
    <td>TEMPLATE_NAME</td>
    <td>["ndc"]["template_name"]</td>
    <td>Template name (blob logger)</td>
  </tr>
  <tr>
    <td>TEMPLATE_DIGEST</td>
    <td>["ndc"]["template_digest"]</td>
    <td>Digest (SHA256) of rendered template contents (blob logger)</td>
  </tr>
  <tr>
    <td>TEMPLATE_HOST_NAME</td>
    <td>["ndc"]["template_host_name"]</td>
    <td>Host name for a rendered template if present (blob logger)</td>
  </tr>
  <tr>
    <td>TEMPLATE_HOST_ID</td>
    <td>["ndc"]["template_host_id"]</td>
    <td>Host database ID for a rendered template if present (blob logger)</td>
  </tr>
  <tr>
    <td>AUDIT_ACTION</td>
    <td>["ndc"]["audit_action"]</td>
    <td>Action performed (e.g. create/update/delete)</td>
  </tr>
  <tr>
    <td>AUDIT_TYPE</td>
    <td>["ndc"]["audit"]</td>
    <td>Database model class or type, subject of an audit record (e.g. Hostgroup or Subnet)</td>
  </tr>
  <tr>
    <td>AUDIT_ID</td>
    <td>["ndc"]["audit"]</td>
    <td>Record database ID of the audit subject</td>
  </tr>
  <tr>
    <td>AUDIT_ATTRIBUTE</td>
    <td>["ndc"]["audit"]</td>
    <td>Attribute name or column an action was performed on (e.g. name or description)</td>
  </tr>
</table>

To persist structured fields, enable persistent system journal by creating `/var/log/journal` directory. Alternatively, logging into JSON format can be used with syslog or file appenders for futher integration:

    :logging:
      :level: info
      :type: syslog
      :json_items:
        - logger
        - timestamp
        - level
        - message
        - mdc
        - ndc
      :facility: LOG_LOCAL6

Structured fields from Foreman appear under "mdc" and "ndc" elements. The logging stack is able to provide additional context via `json_items` setting:

* logger - the name of the logger that generated the log event.
* timestamp - the timestamp of the log event.
* level - the level of the log event.
* message - the application supplied message associated with the log event.
* file - the file name where the logging request was issued.
* line - the line number where the logging request was issued.
* method - the method name where the logging request was issued.
* hostname - the hostname
* pid - the process ID of the currently running program.
* millis - the number of milliseconds elapsed from the construction of the Layout until creation of the log event.
* thread_id - the object ID of the thread that generated the log event.
* thread - the name of the thread that generated the log event. Name can be specified using Thread.current[:name] notation. Output empty string if name not specified. This option helps to create more human readable output for multithread application logs.

#### Syslog facility

By default, syslog facility is set to LOCAL6 (or USER6). This can be changed via:

    :logging:
      :facility: LOG_LOCAL6

To forward logs to separate directory via rsyslog, create file `/etc/rsyslog.d/foreman.conf`:

    local6.* /var/log/foreman/production.log

### Smart proxy debugging

Edit `/etc/foreman-proxy/settings.yml` and change or add :log_level:

    # WARN, DEBUG, Error, Fatal, INFO, UNKNOWN
    :log_level: DEBUG

And restart the smart proxy:

    service foreman-proxy restart

Also see [Smart Proxy Settings]({{ site.baseurl }}manuals/{{ page.version }}/index.html#4.3.2SmartProxySettings) for more information.
